--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,11 @@
+ErrorDocument 404 /Web/github/petitcom3/404.php
+ErrorDocument 503 /Web/github/petitcom3/503.php
+
 RewriteEngine on
+
+# RewriteCond %{REQUEST_URI} !=/Web/github/petitcom3/503.php
+# RewriteRule ^.*$ $1 [R=503,L]
+
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html 
@@ -8,4 +15,4 @@ RewriteCond %{REQUEST_FILENAME}\.php -f
 RewriteRule ^(.*)$ $1.php
 
 RewriteCond %{THE_REQUEST} \.(php|html)\ HTTP
-RewriteRule ^(.*)\.(php|html)$ https://$1 [R=307,L]
+RewriteRule ^(.*)\.(php|html)$ /Web/github/petitcom3/$1 [R=307,L]
